# batch-video-compressor

./: .gitignore  BACKLOG.md  CLAUDE.md  Makefile  README.md  RELEASE_NOTES.md  compress.py  profiles.toml  pyproject.toml
tests/: test_compress.py
