[project]
name = "batch-video-compressor"
version = "0.1.0"
description = "Batch-compress videos with ffpb (libx265 720p) with resume support"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.9",
]

[tool.pytest.ini_options]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "ARG",
    "PIE",
    "RUF",
    "SIM",
    "UP",
]
ignore = [
    "E501",
    "RUF001",
    "RUF002",
]
